--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
               
               <div class="expertise-item reveal-text">
                 <span class="exp-label">Foundations</span>
-                <h4>Advanced Statistics</h4>
+                <h4 class="expertise-title">Advanced Statistics</h4>
                 <p>Probability, Linear Algebra & Descriptive Models.</p>
               </div>
 
               <div class="expertise-item reveal-text">
                 <span class="exp-label">Intelligence</span>
-                <h4>Deep Learning</h4>
+                <h4 class="expertise-title">Deep Learning</h4>
                 <p>Neural Networks and Generative AI Research.</p>
               </div>
 
               <div class="expertise-item reveal-text">
                 <span class="exp-label">Development</span>
-                <h4>MCA Core</h4>
+                <h4 class="expertise-title">MCA Core</h4>
                 <p>Software Engineering & SQL Data Architecture.</p>
               </div>
 
               <div class="expertise-item reveal-text">
                 <span class="exp-label">Logic</span>
-                <h4>Data Flow</h4>
+                <h4 class="expertise-title">Data Flow</h4>
                 <p>Designing optimized DFDs for enterprise systems.</p>
               </div>
 
@@ -151,7 +151,7 @@
                 <span class="project-tag">Statistical Research</span>
               </div>
               <div class="card-content">
-                <h3>Central Tendency Engine</h3>
+                <h3 class="project-title">Central Tendency Engine</h3>
                 <p>Advanced Python implementation for descriptive statistics, variance analysis, and probability distributions.</p>
               </div>
               <div class="card-footer">
@@ -171,7 +171,7 @@
                 <span class="project-tag">Deep Learning</span>
               </div>
               <div class="card-content">
-                <h3>Neural Architecture Lab</h3>
+                <h3 class="project-title">Neural Architecture Lab</h3>
                 <p>Building custom backpropagation models and neural network foundations for predictive intelligence.</p>
               </div>
               <div class="card-footer">
@@ -191,7 +191,7 @@
                 <span class="project-tag">Systems Logic</span>
               </div>
               <div class="card-content">
-                <h3>Intelligent Data Flow</h3>
+                <h3 class="project-title">Intelligent Data Flow</h3>
                 <p>Optimizing Data Flow Diagrams (DFDs) and schema mapping for enterprise-grade applications.</p>
               </div>
               <div class="card-footer">
@@ -211,7 +211,7 @@
                 <span class="project-tag">Generative AI</span>
               </div>
               <div class="card-content">
-                <h3>LLM Experimentation</h3>
+                <h3 class="project-title">LLM Experimentation</h3>
                 <p>Researching prompt engineering and integrating Large Language Models into modern software stacks.</p>
               </div>
               <div class="card-footer">
@@ -231,7 +231,7 @@
                 <span class="project-tag">MCA Backend</span>
               </div>
               <div class="card-content">
-                <h3>Relational Optimizer</h3>
+                <h3 class="project-title">Relational Optimizer</h3>
                 <p>Advanced query optimization and normalization techniques for high-performance databases.</p>
               </div>
               <div class="card-footer">
@@ -251,7 +251,7 @@
                 <span class="project-tag">Web3 Logic</span>
               </div>
               <div class="card-content">
-                <h3>Airdrop Farming Script</h3>
+                <h3 class="project-title">Airdrop Farming Script</h3>
                 <p>Automated scripts for tracking and participating in decentralized network distributions.</p>
               </div>
               <div class="card-footer">
@@ -271,7 +271,7 @@
                 <span class="project-tag">Visual Math</span>
               </div>
               <div class="card-content">
-                <h3>Matrix Transformation Lab</h3>
+                <h3 class="project-title">Matrix Transformation Lab</h3>
                 <p>Visual tool for matrix math essential for computer graphics and Machine Learning.</p>
               </div>
               <div class="card-footer">
