ShubhLedger project added

--- a/index.html
+++ b/index.html
@@ -166,20 +166,21 @@
 
         <div class="horizontal-track">
           
-          <a href="https://github.com/shubham95792/NumPy-Mini-Projects/blob/main/Data_Normalization_and_Scaling_Tool.py" target="_blank" class="project-card reveal-card">
+          <a href="https://shubhledger.infinityfreeapp.com/" target="_blank" class="project-card reveal-card">
             <div class="card-inner">
               <div class="card-top">
                 <span class="card-num">01</span>
-                <span class="project-tag">Statistical Research</span>
+                <span class="project-tag">BLOCKCHAIN FINANCE</span>
               </div>
               <div class="card-content">
-                <h3 class="project-title">Central Tendency Engine</h3>
-                <p>Advanced Python implementation for descriptive statistics, variance analysis, and probability distributions.</p>
+                <h3 class="project-title">ShubhLedger</h3>
+                <p>Advanced web-based crypto portfolio tracker for real-time token balances tracking, and portfolio performance analytics.
+                </p>
               </div>
               <div class="card-footer">
                 <div class="tech-pills">
-                  <span class="pill">Python</span>
-                  <span class="pill">Statistics</span>
+                  <span class="pill">JAVASCRIPT</span>
+                  <span class="pill">PHP</span>
                 </div>
                 <div class="visit-btn"><i class="fas fa-arrow-right"></i></div>
               </div>
